kubernetes/apps/frontend/overlays/prod/lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prod-frontend
  namespace: prod
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "external"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
